--- a/futbol yangiliklari/index2.html
+++ b/futbol yangiliklari/index2.html
@@ -53,7 +53,7 @@
 
       <div class="card-group">
         <div class="card">
-          <img src="./ronaldo2.webp" class="card-img-top" alt="...">
+          <img src="./Новая папка/ronaldo2.webp" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">AL-NASR FUTBOLCHISI</h5>
             <p class="card-text"> Oltin butsa yutib, ikki turli chempionatda bu mukofotni qoʻlga kiritgan birinchi sportchi boʻldi.</p>
@@ -61,7 +61,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="./benzema 3.webp" class="card-img-top" alt="...">
+          <img src="./Новая папка/benzema 2.webp" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">REAL FUTBOLCHISI</h5>
             <p class="card-text">30 dan ortiq gol urishga muvaffaq bo'ldi. Uning chiqishlari uchun unga nom berildi Professional futbolchilar milliy ittifoqi (UNFP)</p>
@@ -69,7 +69,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="./messi.webp" class="card-img-top" alt="...">
+          <img src="./Новая папка/messi.webp" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">BARSELONA</h5>
             <p class="card-text">2012-yil bir mavsumda Barselona klubi safida 91 ta gol urib, buzish qiyin boʻlgan rekord oʻrnatdi. </p>
